tests/architecture/fixtures/pass/src/dialogos/domain/model.py
from __future__ import annotations


class Turn:
    def __init__(self, text: str) -> None:
        self.text = text
