tests/architecture/fixtures/fail/src/silicato/ui/legacy_import.py
from __future__ import annotations

from silicato.config import SilicatoConfig


def load_config() -> SilicatoConfig | None:
    return None
